--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
+    "karma-sinon": "^1.0.4",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18"
   }
